--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>goods.house</groupId>
 	<artifactId>xiucai</artifactId>
@@ -38,6 +37,18 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.54</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.4.0</version>
 		</dependency>
 
 		<dependency>
@@ -88,6 +99,23 @@
 	<build>
 		<resources>
 			<resource>
+				<directory>${basedir}/src/main/webapp</directory>
+			</resource>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>${basedir}/src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+				<!--打包要排除的文件-->
+				<excludes>
+					<exclude>**/*.properties</exclude>
+				</excludes>
+			</resource>
+			<!--<resource>
 				<directory>src/main/java</directory>
 				<includes>
 					<include>**/*.properties</include>
@@ -97,14 +125,14 @@
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
-				<!--—打包时排除配置文件-->
+				&lt;!&ndash;—打包时排除配置文件&ndash;&gt;
 				<excludes>
 					<exclude>**/*.properties</exclude>
-					<exclude>**/*.xml</exclude>
-					<!--<exclude>**/*.yml</exclude>-->
+					&lt;!&ndash;<exclude>**/*.xml</exclude>&ndash;&gt;
+					&lt;!&ndash;<exclude>**/*.yml</exclude>&ndash;&gt;
 				</excludes>
 				<filtering>false</filtering>
-			</resource>
+			</resource>-->
 		</resources>
 		<plugins>
 			<plugin>
