--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,9 +3,9 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.jdbc.Driver
         druid:
-            url: jdbc:mysql://127.0.0.1:3306/juban?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+            url: jdbc:mysql://47.104.22.55:3306/xiucai?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
             username: root
-            password: lvxiucai78
+            password: 123456
             initial-size: 10
             max-active: 100
             min-idle: 10
