--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.40</version>
 		</dependency>
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
