--- a/pom.xml
+++ b/pom.xml
@@ -327,7 +327,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<jvmArguments>
-						-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+						-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8888
 					</jvmArguments>
 				</configuration>
 				<executions>
