--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -4,9 +4,9 @@
 #\u5305\u540D
 package=io.renren.modules.generator
 #\u4F5C\u8005
-author=chenshun
+author=lvxiucai
 #Email
-email=sunlightcs@gmail.com
+email=lvxiucai@aliyun.com
 #\u8868\u524D\u7F00(\u7C7B\u540D\u4E0D\u4F1A\u5305\u542B\u8868\u524D\u7F00)
 tablePrefix=tb_
 
